# picklescan

./: .gitattributes  .gitignore  AGENTS.md  NOTICE.txt  README.md  SECURITY.md  conda.extras.yaml  conda.test.yaml  conda.yaml  huggingface_models.ipynb  requirements.txt  requirements_extras.txt  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json
.github/prompts/: fixSecurityAdvisory.prompt.md
.github/workflows/: codeql-analysis.yml  publish.yml  test.yml
bugs/: GHSA-4r9r-ch6f-vxmx.md  GHSA-86cj-95qr-2p4f.md  GHSA-f4x7-rfwp-v3xw.md  GHSA-f745-w6jp-hpxx.md  GHSA-h3qp-7fh3-f8h4.md  GHSA-jhph-76pp-mggw.md  GHSA-vr7h-p6mm-wpmh.md  GHSA-vv6j-3g6g-2pvj.md
src/picklescan/: __init__.py  __main__.py  cli.py  relaxed_zipfile.py  scanner.py  torch.py
tests/: init_data_files.py  test_scanner.py
tests/data/: benign0_v0.pkl  benign0_v3.pkl  benign0_v4.pkl  broken_model.pkl  malicious-invalid-bytes.pkl  malicious1.7z  malicious10.pkl  malicious11.pkl  malicious12.pkl  malicious13a.pkl  malicious13b.pkl  malicious14.pkl  malicious15a.pkl  malicious15b.pkl  malicious16.pkl  malicious17.pkl  malicious18.pkl  malicious19.pkl  malicious1_v0.pkl  malicious1_v3.pkl  malicious1_v4.pkl  malicious20.pkl  malicious2_v0.pkl  malicious2_v3.pkl  malicious2_v4.pkl  malicious3.pkl  malicious4.pickle  malicious5.pickle  malicious6.pkl  malicious7.pkl  malicious8.pkl  malicious9.pkl  object_array.npy  pytorch_magic_bypass.pt  sys_module_override_sploit.pkl
tests/data2/: GHSA-3gf5-cxq9-w223.pkl  GHSA-3vg9-h568-4w9m.pkl  GHSA-4675-36f9-wf6r.pkl  GHSA-46h3-79wf-xr6c.pkl  (+59 more)
