[metadata]
name = picklescan
version = 0.0.5
author = Matthieu Maitre
author_email = mmaitre314@users.noreply.github.com
description = Security scanner detecting Python Pickle files performing suspicious actions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mmaitre314/picklescan
project_urls =
    Bug Tracker = https://github.com/mmaitre314/picklescan/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    picklescan = picklescan.cli:main

[flake8]
max-line-length = 160
extend-ignore = E203

